[package]
name = "confidis"
version = "0.1.0"
authors = ["seveibar <seveibar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fasthash = "0.4"
dbscan = "0.2"
num = "0.3.0"
assert_approx_eq = "1.1.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
structopt = "0.3.15"
