[package]
name = "confidis"
version = "0.1.0"
authors = ["seveibar <seveibar@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dbscan = "0.2"
num = "0.3.0"
assert_approx_eq = "1.1.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
structopt = "0.3.15"
wasm-bindgen = { version = "0.2.65", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "s"
